--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,9 +1,20 @@
-<!-- templates/posts/index.html -->
+{% extends 'base.html' %}
+<!-- templates/goup/index.html -->
 <!DOCTYPE html> 
-<html lang="ru">
-  <head>
+<html lang="ru">          
+  <head>       
   </head>
-  <body>
-    <h1>Главная страница</h1>
+  <body>       
+    <header>
+      <!-- Это тег шаблонизатора include, сюда будет включён код
+      из файла includes/header.html -->
+      {% include 'includes/header.html' %}
+    </header>
+    <main>
+      Информация на главной странице
+    </main>
+    <footer>
+      {% include 'includes/footer.html' %} 
+    </footer>
   </body>
 </html>
